--- a/config/default/core.entity_form_display.node.component_page.default.yml
+++ b/config/default/core.entity_form_display.node.component_page.default.yml
@@ -1,54 +1,36 @@
-uuid: 93596ee3-4210-4593-b2ae-f042b09d4300
+uuid: 5887b39e-3623-4ee8-b7bc-776b8a6456ef
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.article.body
-    - field.field.node.article.field_tags
-    - node.type.article
+    - field.field.node.component_page.field_metatags
+    - field.field.node.component_page.layout_builder__layout
+    - node.type.component_page
     - workflows.workflow.editorial
   module:
-    - allowed_formats
     - content_moderation
+    - metatag
     - path
     - scheduler
     - scheduler_content_moderation_integration
-    - text
-_core:
-  default_config_hash: DbOzhm7lodmALRYYxN_NtVaMuf-Obkg8nxZUvoyVJ54
-id: node.article.default
+id: node.component_page.default
 targetEntityType: node
-bundle: article
+bundle: component_page
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 1
-    region: content
-    settings:
-      rows: 15
-      summary_rows: 3
-      placeholder: ''
-      show_summary: false
-    third_party_settings:
-      allowed_formats:
-        hide_help: '0'
-        hide_guidelines: '0'
   created:
     type: datetime_timestamp
     weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_tags:
-    type: entity_reference_autocomplete_tags
-    weight: 3
+  field_metatags:
+    type: metatag_firehose
+    weight: 121
     region: content
     settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+      sidebar: true
+      use_details: true
     third_party_settings: {  }
   langcode:
     type: language_select
@@ -88,14 +70,9 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  scheduler_settings:
-    weight: 20
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 121
+    weight: 120
     region: content
     settings:
       display_label: true
@@ -109,7 +86,7 @@ content:
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 0
+    weight: -5
     region: content
     settings:
       size: 60
@@ -142,4 +119,5 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  layout_builder__layout: true
