--- a/config/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/default/core.entity_view_display.node.page.teaser.yml
@@ -1,6 +1,6 @@
 uuid: 0d89b61d-e45f-4e31-9dc2-861048ccc454
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
@@ -24,6 +24,11 @@ content:
       trim_length: 600
     third_party_settings: {  }
     weight: 100
+    region: content
+  content_moderation_control:
+    settings: {  }
+    third_party_settings: {  }
+    weight: -20
     region: content
   links:
     settings: {  }
