--- a/config/default/node.type.page.yml
+++ b/config/default/node.type.page.yml
@@ -13,21 +13,21 @@ third_party_settings:
   scheduler:
     expand_fieldset: when_required
     fields_display_mode: vertical_tab
-    publish_enable: true
+    publish_enable: false
     publish_past_date: error
     publish_past_date_created: false
     publish_required: false
     publish_revision: false
     publish_touch: false
     show_message_after_update: false
-    unpublish_enable: true
+    unpublish_enable: false
     unpublish_required: false
     unpublish_revision: false
 _core:
   default_config_hash: CGiJnsvKfTbh4QMH0Q2d-YQZ0Eksrlhl4y0Uc3-xncA
 name: 'Basic page'
 type: page
-description: 'Use <em>basic pages</em> for your static content, such as an ''About us'' page.'
+description: 'Use <em>Basic page</em> for the static content, like as ''Privacy Statement'' page.'
 help: ''
 new_revision: true
 preview_mode: 1
