--- a/config/default/system.site.yml
+++ b/config/default/system.site.yml
@@ -6,9 +6,9 @@ name: Drupal.nl
 mail: email@example.com
 slogan: ''
 page:
-  403: ''
-  404: ''
-  front: /node
+  403: /node/4
+  404: /node/5
+  front: /node/3
 admin_compact_mode: false
 weight_select_max: 100
 default_langcode: en
