--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,8 @@
     "drupal/inline_entity_form": "^1.0",
     "drupal/layout_builder_browser": "^1.1",
     "drupal/layout_builder_iframe_modal": "^1.2",
+    "drupal/layout_builder_limit": "1.0.x-dev@dev",
+    "drupal/layout_builder_lock": "^1.1",
     "drupal/layout_builder_modal": "^1.1",
     "drupal/layout_builder_restrictions": "^2.7",
     "drupal/lazy": "^3.4",
@@ -225,6 +227,10 @@
       "drupal/paragraphs": {
         "Affix correct langcode to paragraph in layout builder": "https://www.drupal.org/files/issues/2020-06-25/paragraphs-2901390-51.patch",
         "Paragraphs do not render: access check for 'view' fail when using layout builder + custom blocks & content revisions because the incorrect parent revision ID is being passed in ParagraphAccessControlHandler::checkAccess(": "https://www.drupal.org/files/issues/2020-07-08/access-controll-issue-3090200-22.patch"
+      },
+      "drupal/layout_builder_limit": {
+          "Render callback must implement TrustedCallbackInterface": "patches/layout-builder-limit-trusted-callback.patch",
+          "Fix layout builder browser AJAX error: section storage returns null": "patches/layout-builder-limit-section-storage.patch"
       }
     }
   },
