--- a/config/default/block.block.themekit_help.yml
+++ b/config/default/block.block.themekit_help.yml
@@ -10,8 +10,8 @@ _core:
   default_config_hash: hLrY3aguszlqhHJ3uDdHnO47Nfsj_9hPjf54GYLFgdQ
 id: themekit_help
 theme: themekit
-region: content
-weight: -7
+region: highlighted
+weight: -3
 provider: null
 plugin: help_block
 settings:
