--- a/config/default/block.block.themekit_local_actions.yml
+++ b/config/default/block.block.themekit_local_actions.yml
@@ -8,8 +8,8 @@ _core:
   default_config_hash: Csyz3mHEFmBZ0trZDkMpfvLAtx2xV56baWzrrJUdsU8
 id: themekit_local_actions
 theme: themekit
-region: content
-weight: -4
+region: highlighted
+weight: -1
 provider: null
 plugin: local_actions_block
 settings:
