--- a/docroot/themes/custom/themekit/partials.yml
+++ b/docroot/themes/custom/themekit/partials.yml
@@ -12,6 +12,12 @@ component--navigation--main:
   css:
     theme:
       dist/css/menu--main.css: {}
+component--simple-banner:
+  dependencies:
+    - themekit/themekit
+  css:
+    theme:
+      dist/css/block--simple-banner.css: {}
 layout--banner:
   dependencies:
     - themekit/themekit
