--- a/config/default/core.entity_view_display.node.case.default.yml
+++ b/config/default/core.entity_view_display.node.case.default.yml
@@ -8,8 +8,8 @@ dependencies:
     - field.field.node.case.field_component_item
     - field.field.node.case.field_components
     - field.field.node.case.field_image
+    - field.field.node.case.field_intro
     - field.field.node.case.field_metatags
-    - field.field.node.case.field_summary
     - node.type.case
     - responsive_image.styles.half_column_hq
   module:
@@ -27,7 +27,7 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 4
+    weight: 5
     region: content
   content_moderation_control:
     settings: {  }
@@ -40,7 +40,7 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 5
+    weight: 6
     region: content
   field_component_item:
     type: entity_reference_revisions_entity_view
@@ -49,7 +49,7 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    weight: 7
+    weight: 8
     region: content
   field_components:
     type: entity_reference_revisions_entity_view
@@ -58,7 +58,7 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    weight: 6
+    weight: 7
     region: content
   field_image:
     type: media_responsive_thumbnail
@@ -69,12 +69,12 @@ content:
     third_party_settings: {  }
     weight: 2
     region: content
-  field_summary:
+  field_intro:
     type: text_default
     label: hidden
     settings: {  }
     third_party_settings: {  }
-    weight: 3
+    weight: 4
     region: content
   links:
     settings: {  }
