--- a/config/default/field.field.node.case.field_intro.yml
+++ b/config/default/field.field.node.case.field_intro.yml
@@ -1,9 +1,9 @@
-uuid: eae6958d-44af-4837-a996-0a4fc048cd41
+uuid: 718d7f97-7ac4-494f-a9ed-9c019154b51a
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_summary
+    - field.storage.node.field_intro
     - node.type.case
   module:
     - allowed_formats
@@ -12,11 +12,11 @@ third_party_settings:
   allowed_formats:
     allowed_formats:
       - full_html
-id: node.case.field_summary
-field_name: field_summary
+id: node.case.field_intro
+field_name: field_intro
 entity_type: node
 bundle: case
-label: Summary
+label: Intro
 description: ''
 required: false
 translatable: false
