--- a/config/default/field.storage.node.field_intro.yml
+++ b/config/default/field.storage.node.field_intro.yml
@@ -1,12 +1,12 @@
-uuid: ba6bd3d2-f68d-416b-8132-f6a5d52e2ff3
+uuid: 0df68234-d74a-46cd-83f5-0e4d74d76c4d
 langcode: en
 status: true
 dependencies:
   module:
     - node
     - text
-id: node.field_summary
-field_name: field_summary
+id: node.field_intro
+field_name: field_intro
 entity_type: node
 type: text_long
 settings: {  }
