--- a/config/default/core.entity_form_display.node.case.default.yml
+++ b/config/default/core.entity_form_display.node.case.default.yml
@@ -9,6 +9,8 @@ dependencies:
     - field.field.node.case.field_components
     - field.field.node.case.field_image
     - field.field.node.case.field_intro
+    - field.field.node.case.field_link
+    - field.field.node.case.field_media
     - field.field.node.case.field_metatags
     - node.type.case
     - workflows.workflow.editorial
@@ -16,6 +18,7 @@ dependencies:
     - allowed_formats
     - content_moderation
     - field_group
+    - link
     - media_library
     - metatag
     - paragraphs
@@ -91,6 +94,8 @@ third_party_settings:
         required_fields: true
     group_sidebar:
       children:
+        - field_media
+        - field_link
         - field_components
       label: Sidebar
       region: content
@@ -155,7 +160,7 @@ content:
     third_party_settings: {  }
   field_components:
     type: paragraphs
-    weight: 7
+    weight: 10
     region: content
     settings:
       title: Component
@@ -190,6 +195,21 @@ content:
       allowed_formats:
         hide_help: '1'
         hide_guidelines: '1'
+  field_link:
+    type: link_default
+    weight: 9
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+  field_media:
+    type: media_library_widget
+    weight: 8
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
   field_metatags:
     type: metatag_firehose
     weight: 16
@@ -200,7 +220,7 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 5
+    weight: 4
     region: content
     settings:
       include_locked: true
@@ -260,7 +280,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 5
     region: content
     settings:
       match_operator: CONTAINS
