--- a/config/default/field.field.paragraph.image_slider.field_media.yml
+++ b/config/default/field.field.paragraph.image_slider.field_media.yml
@@ -10,7 +10,7 @@ id: paragraph.image_slider.field_media
 field_name: field_media
 entity_type: paragraph
 bundle: image_slider
-label: Logo
+label: Award
 description: ''
 required: false
 translatable: true
