add component social media, update case note type, dd new fields for partner node type

--- a/config/default/core.entity_view_display.node.case.teaser.yml
+++ b/config/default/core.entity_view_display.node.case.teaser.yml
@@ -11,7 +11,7 @@ dependencies:
     - field.field.node.case.field_image
     - field.field.node.case.field_intro
     - field.field.node.case.field_link
-    - field.field.node.case.field_media
+    - field.field.node.case.field_logo
     - field.field.node.case.field_metatags
     - node.type.case
     - responsive_image.styles.third_column_hq
@@ -47,7 +47,7 @@ hidden:
   field_components: true
   field_intro: true
   field_link: true
-  field_media: true
+  field_logo: true
   field_metatags: true
   langcode: true
   links: true
