--- a/config/default/core.entity_form_display.node.case.default.yml
+++ b/config/default/core.entity_form_display.node.case.default.yml
@@ -10,7 +10,7 @@ dependencies:
     - field.field.node.case.field_image
     - field.field.node.case.field_intro
     - field.field.node.case.field_link
-    - field.field.node.case.field_media
+    - field.field.node.case.field_logo
     - field.field.node.case.field_metatags
     - node.type.case
     - workflows.workflow.editorial
@@ -95,6 +95,7 @@ third_party_settings:
     group_sidebar:
       children:
         - field_media
+        - field_logo
         - field_link
         - field_components
       label: Sidebar
@@ -160,7 +161,7 @@ content:
     third_party_settings: {  }
   field_components:
     type: paragraphs
-    weight: 10
+    weight: 11
     region: content
     settings:
       title: Component
@@ -197,15 +198,15 @@ content:
         hide_guidelines: '1'
   field_link:
     type: link_default
-    weight: 9
+    weight: 10
     region: content
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
-  field_media:
+  field_logo:
     type: media_library_widget
-    weight: 8
+    weight: 9
     region: content
     settings:
       media_types: {  }
@@ -280,7 +281,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 6
     region: content
     settings:
       match_operator: CONTAINS
