--- a/config/default/core.entity_form_display.node.partner.default.yml
+++ b/config/default/core.entity_form_display.node.partner.default.yml
@@ -4,26 +4,31 @@ status: true
 dependencies:
   config:
     - field.field.node.partner.body
+    - field.field.node.partner.field_address
     - field.field.node.partner.field_category
     - field.field.node.partner.field_components
-    - field.field.node.partner.field_count
+    - field.field.node.partner.field_email
     - field.field.node.partner.field_image
     - field.field.node.partner.field_intro
+    - field.field.node.partner.field_link
+    - field.field.node.partner.field_logo
     - field.field.node.partner.field_metatags
-    - field.field.node.partner.field_related
+    - field.field.node.partner.field_phone
     - node.type.partner
     - workflows.workflow.editorial
   module:
+    - address
     - allowed_formats
-    - block_field
     - content_moderation
     - field_group
+    - link
     - media_library
     - metatag
     - paragraphs
     - path
     - scheduler
     - scheduler_content_moderation_integration
+    - telephone
     - text
 third_party_settings:
   field_group:
@@ -63,7 +68,6 @@ third_party_settings:
     group_content:
       children:
         - body
-        - field_related
       label: Content
       region: content
       parent_name: group_tabs
@@ -78,8 +82,12 @@ third_party_settings:
         required_fields: true
     group_sidebar:
       children:
-        - field_components
+        - field_logo
+        - field_email
+        - field_phone
+        - field_address
         - field_count
+        - field_components
       label: Sidebar
       region: content
       parent_name: group_tabs
@@ -127,7 +135,13 @@ content:
         hide_guidelines: '1'
   created:
     type: datetime_timestamp
-    weight: 5
+    weight: 7
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_address:
+    type: address_default
+    weight: 21
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -139,11 +153,11 @@ content:
     third_party_settings: {  }
   field_components:
     type: paragraphs
-    weight: 18
+    weight: 26
     region: content
     settings:
-      title: Paragraph
-      title_plural: Paragraphs
+      title: 'Social Media'
+      title_plural: 'Social Medias'
       edit_mode: open
       closed_mode: summary
       autocollapse: none
@@ -156,12 +170,13 @@ content:
         collapse_edit_all: collapse_edit_all
         duplicate: duplicate
     third_party_settings: {  }
-  field_count:
-    type: number
+  field_email:
+    type: email_default
     weight: 19
     region: content
     settings:
       placeholder: ''
+      size: 60
     third_party_settings: {  }
   field_image:
     type: media_library_widget
@@ -172,7 +187,7 @@ content:
     third_party_settings: {  }
   field_intro:
     type: text_textarea
-    weight: 18
+    weight: 19
     region: content
     settings:
       rows: 5
@@ -181,71 +196,84 @@ content:
       allowed_formats:
         hide_help: '1'
         hide_guidelines: '1'
+  field_link:
+    type: link_default
+    weight: 27
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+  field_logo:
+    type: media_library_widget
+    weight: 18
+    region: content
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
   field_metatags:
     type: metatag_firehose
-    weight: 16
+    weight: 18
     region: content
     settings:
       sidebar: true
       use_details: true
     third_party_settings: {  }
-  field_related:
-    type: block_field_default
-    weight: 5
+  field_phone:
+    type: telephone_default
+    weight: 20
     region: content
     settings:
-      plugin_id: ''
-      settings: {  }
-      configuration_form: full
+      placeholder: ''
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 3
+    weight: 5
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 14
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 8
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 6
+    weight: 8
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 9
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   publish_state:
     type: scheduler_moderation
-    weight: 11
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 15
+    weight: 17
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 7
+    weight: 9
     region: content
     settings:
       display_label: true
@@ -260,7 +288,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 4
+    weight: 6
     region: content
     settings:
       match_operator: CONTAINS
@@ -270,18 +298,18 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 10
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   unpublish_state:
     type: scheduler_moderation
-    weight: 12
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   url_redirects:
-    weight: 13
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
