--- a/config/default/core.entity_view_display.node.case.default.yml
+++ b/config/default/core.entity_view_display.node.case.default.yml
@@ -10,10 +10,10 @@ dependencies:
     - field.field.node.case.field_image
     - field.field.node.case.field_intro
     - field.field.node.case.field_link
-    - field.field.node.case.field_media
+    - field.field.node.case.field_logo
     - field.field.node.case.field_metatags
     - node.type.case
-    - responsive_image.styles.half_column_hq
+    - responsive_image.styles.fourth_column_hq
   module:
     - entity_reference_revisions
     - link
@@ -43,7 +43,7 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 6
+    weight: 3
     region: content
   field_component_item:
     type: entity_reference_revisions_entity_view
@@ -52,7 +52,7 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    weight: 8
+    weight: 9
     region: content
   field_components:
     type: entity_reference_revisions_entity_view
@@ -81,7 +81,7 @@ content:
     region: content
   field_link:
     type: link
-    label: above
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
@@ -89,16 +89,16 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    weight: 10
+    weight: 8
     region: content
-  field_media:
-    type: entity_reference_entity_view
-    label: above
+  field_logo:
+    type: media_responsive_thumbnail
+    label: hidden
     settings:
-      view_mode: default
-      link: false
+      responsive_image_style: fourth_column_hq
+      image_link: ''
     third_party_settings: {  }
-    weight: 9
+    weight: 6
     region: content
   links:
     settings: {  }
