--- a/config/default/core.entity_view_display.node.partner.default.yml
+++ b/config/default/core.entity_view_display.node.partner.default.yml
@@ -4,18 +4,22 @@ status: true
 dependencies:
   config:
     - field.field.node.partner.body
+    - field.field.node.partner.field_address
     - field.field.node.partner.field_category
     - field.field.node.partner.field_components
-    - field.field.node.partner.field_count
+    - field.field.node.partner.field_email
     - field.field.node.partner.field_image
     - field.field.node.partner.field_intro
+    - field.field.node.partner.field_link
+    - field.field.node.partner.field_logo
     - field.field.node.partner.field_metatags
-    - field.field.node.partner.field_related
+    - field.field.node.partner.field_phone
     - node.type.partner
     - responsive_image.styles.half_column_hq
   module:
-    - block_field
+    - address
     - entity_reference_revisions
+    - link
     - media_responsive_thumbnail
     - text
     - user
@@ -36,6 +40,13 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
+  field_address:
+    type: address_default
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    weight: 13
+    region: content
   field_category:
     type: entity_reference_label
     label: hidden
@@ -46,21 +57,19 @@ content:
     region: content
   field_components:
     type: entity_reference_revisions_entity_view
-    label: hidden
+    label: above
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
-    weight: 5
+    weight: 14
     region: content
-  field_count:
-    type: number_integer
+  field_email:
+    type: basic_string
     label: above
-    settings:
-      thousand_separator: ''
-      prefix_suffix: true
+    settings: {  }
     third_party_settings: {  }
-    weight: 8
+    weight: 11
     region: content
   field_image:
     type: media_responsive_thumbnail
@@ -73,17 +82,37 @@ content:
     region: content
   field_intro:
     type: text_default
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 9
     region: content
-  field_related:
-    type: block_field
+  field_link:
+    type: link
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    weight: 15
+    region: content
+  field_logo:
+    type: entity_reference_label
     label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 10
+    region: content
+  field_phone:
+    type: basic_string
+    label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 6
+    weight: 12
     region: content
   links:
     settings: {  }
