--- a/config/default/core.entity_view_display.node.partner.teaser.yml
+++ b/config/default/core.entity_view_display.node.partner.teaser.yml
@@ -5,13 +5,16 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.partner.body
+    - field.field.node.partner.field_address
     - field.field.node.partner.field_category
     - field.field.node.partner.field_components
-    - field.field.node.partner.field_count
+    - field.field.node.partner.field_email
     - field.field.node.partner.field_image
     - field.field.node.partner.field_intro
+    - field.field.node.partner.field_link
+    - field.field.node.partner.field_logo
     - field.field.node.partner.field_metatags
-    - field.field.node.partner.field_related
+    - field.field.node.partner.field_phone
     - node.type.partner
     - responsive_image.styles.third_column_hq
   module:
@@ -43,10 +46,13 @@ content:
     region: content
 hidden:
   body: true
+  field_address: true
   field_category: true
   field_components: true
-  field_count: true
+  field_email: true
   field_intro: true
+  field_link: true
+  field_logo: true
   field_metatags: true
-  field_related: true
+  field_phone: true
   langcode: true
