--- a/config/default/field.field.node.partner.field_link.yml
+++ b/config/default/field.field.node.partner.field_link.yml
@@ -1,20 +1,20 @@
-uuid: 797dcf1b-9410-4a98-a0e1-8f94abcbe1b0
+uuid: 2617c194-5292-47b6-9641-a17bc4fe949f
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_link
-    - node.type.case
+    - node.type.partner
   module:
     - link
-id: node.case.field_link
+id: node.partner.field_link
 field_name: field_link
 entity_type: node
-bundle: case
+bundle: partner
 label: 'Website Url'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
