--- a/config/default/field.field.paragraph.social_media.field_p_link.yml
+++ b/config/default/field.field.paragraph.social_media.field_p_link.yml
@@ -1,18 +1,18 @@
-uuid: 706f540e-6710-44bc-a931-df701429bcc8
+uuid: 6a7b2fc4-daf1-4d6e-b65c-38e44258d863
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_components
-    - node.type.partner
+    - field.storage.paragraph.field_p_link
+    - paragraphs.paragraphs_type.link_default
     - paragraphs.paragraphs_type.social_media
   module:
     - entity_reference_revisions
-id: node.partner.field_components
-field_name: field_components
-entity_type: node
-bundle: partner
-label: 'Social Media'
+id: paragraph.social_media.field_p_link
+field_name: field_p_link
+entity_type: paragraph
+bundle: social_media
+label: Link
 description: ''
 required: false
 translatable: true
@@ -22,7 +22,7 @@ settings:
   handler: 'default:paragraph'
   handler_settings:
     target_bundles:
-      social_media: social_media
+      link_default: link_default
     negate: 0
     target_bundles_drag_drop:
       detail_item:
@@ -39,11 +39,11 @@ settings:
         enabled: false
       link_default:
         weight: 12
-        enabled: false
+        enabled: true
       link_file:
         weight: 13
         enabled: false
       social_media:
         weight: 14
-        enabled: true
+        enabled: false
 field_type: entity_reference_revisions
