add awards component, update partner node type

--- a/config/default/core.entity_form_display.node.partner.default.yml
+++ b/config/default/core.entity_form_display.node.partner.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.partner.body
     - field.field.node.partner.field_address
     - field.field.node.partner.field_category
+    - field.field.node.partner.field_component_item
     - field.field.node.partner.field_components
     - field.field.node.partner.field_email
     - field.field.node.partner.field_image
@@ -86,8 +87,9 @@ third_party_settings:
         - field_email
         - field_phone
         - field_address
-        - field_count
         - field_components
+        - field_link
+        - field_component_item
       label: Sidebar
       region: content
       parent_name: group_tabs
@@ -135,7 +137,7 @@ content:
         hide_guidelines: '1'
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -151,9 +153,28 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_component_item:
+    type: paragraphs
+    weight: 24
+    region: content
+    settings:
+      title: 'Splash Award'
+      title_plural: 'Splash Awards'
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
+      add_mode: button
+      form_display_mode: default
+      default_paragraph_type: splash_awards
+      features:
+        add_above: '0'
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
+    third_party_settings: {  }
   field_components:
     type: paragraphs
-    weight: 26
+    weight: 22
     region: content
     settings:
       title: 'Social Media'
@@ -198,7 +219,7 @@ content:
         hide_guidelines: '1'
   field_link:
     type: link_default
-    weight: 27
+    weight: 23
     region: content
     settings:
       placeholder_url: ''
@@ -213,7 +234,7 @@ content:
     third_party_settings: {  }
   field_metatags:
     type: metatag_firehose
-    weight: 18
+    weight: 16
     region: content
     settings:
       sidebar: true
@@ -228,52 +249,52 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 5
+    weight: 2
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 16
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 8
+    weight: 6
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 11
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
   publish_state:
     type: scheduler_moderation
-    weight: 13
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 17
+    weight: 15
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 9
+    weight: 7
     region: content
     settings:
       display_label: true
@@ -288,7 +309,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
@@ -298,18 +319,18 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 12
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
   unpublish_state:
     type: scheduler_moderation
-    weight: 14
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   url_redirects:
-    weight: 15
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
