--- a/config/default/core.entity_view_display.node.partner.default.yml
+++ b/config/default/core.entity_view_display.node.partner.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.partner.body
     - field.field.node.partner.field_address
     - field.field.node.partner.field_category
+    - field.field.node.partner.field_component_item
     - field.field.node.partner.field_components
     - field.field.node.partner.field_email
     - field.field.node.partner.field_image
@@ -21,6 +22,7 @@ dependencies:
     - entity_reference_revisions
     - link
     - media_responsive_thumbnail
+    - telephone
     - text
     - user
 id: node.partner.default
@@ -42,7 +44,7 @@ content:
     region: content
   field_address:
     type: address_default
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 13
@@ -55,9 +57,18 @@ content:
     third_party_settings: {  }
     weight: 7
     region: content
+  field_component_item:
+    type: entity_reference_revisions_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 16
+    region: content
   field_components:
     type: entity_reference_revisions_entity_view
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -89,7 +100,7 @@ content:
     region: content
   field_link:
     type: link
-    label: above
+    label: hidden
     settings:
       trim_length: 80
       url_only: false
@@ -108,9 +119,10 @@ content:
     weight: 10
     region: content
   field_phone:
-    type: basic_string
+    type: telephone_link
     label: above
-    settings: {  }
+    settings:
+      title: ''
     third_party_settings: {  }
     weight: 12
     region: content
