--- a/config/default/core.entity_view_display.node.partner.teaser.yml
+++ b/config/default/core.entity_view_display.node.partner.teaser.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.partner.body
     - field.field.node.partner.field_address
     - field.field.node.partner.field_category
+    - field.field.node.partner.field_component_item
     - field.field.node.partner.field_components
     - field.field.node.partner.field_email
     - field.field.node.partner.field_image
@@ -48,6 +49,7 @@ hidden:
   body: true
   field_address: true
   field_category: true
+  field_component_item: true
   field_components: true
   field_email: true
   field_intro: true
