--- a/config/default/core.entity_view_display.node.case.small_teaser.yml
+++ b/config/default/core.entity_view_display.node.case.small_teaser.yml
@@ -1,9 +1,9 @@
-uuid: 3d7caf63-d7d4-4bb2-b878-633f824a52cd
+uuid: bb3d86d9-317e-45cd-9fa6-347eff138a62
 langcode: en
-status: true
+status: false
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.small_teaser
     - field.field.node.case.body
     - field.field.node.case.field_category
     - field.field.node.case.field_component_item
@@ -15,14 +15,19 @@ dependencies:
     - field.field.node.case.field_metatags
     - field.field.node.case.field_reference
     - node.type.case
-    - responsive_image.styles.third_column_hq
+    - responsive_image.styles.fourth_column_hq
   module:
+    - layout_builder
     - media_responsive_thumbnail
     - user
-id: node.case.teaser
+third_party_settings:
+  layout_builder:
+    enabled: false
+    allow_custom: false
+id: node.case.small_teaser
 targetEntityType: node
 bundle: case
-mode: teaser
+mode: small_teaser
 content:
   field_category:
     type: entity_reference_label
@@ -32,11 +37,11 @@ content:
     third_party_settings: {  }
     weight: 1
     region: content
-  field_image:
+  field_logo:
     type: media_responsive_thumbnail
     label: hidden
     settings:
-      responsive_image_style: third_column_hq
+      responsive_image_style: fourth_column_hq
       image_link: ''
     third_party_settings: {  }
     weight: 0
@@ -46,9 +51,9 @@ hidden:
   content_moderation_control: true
   field_component_item: true
   field_components: true
+  field_image: true
   field_intro: true
   field_link: true
-  field_logo: true
   field_metatags: true
   field_reference: true
   langcode: true
