--- a/config/default/core.entity_view_display.node.partner.default.yml
+++ b/config/default/core.entity_view_display.node.partner.default.yml
@@ -16,7 +16,7 @@ dependencies:
     - field.field.node.partner.field_metatags
     - field.field.node.partner.field_phone
     - node.type.partner
-    - responsive_image.styles.half_column_hq
+    - responsive_image.styles.fourth_column_hq
   module:
     - address
     - entity_reference_revisions
@@ -77,7 +77,7 @@ content:
     region: content
   field_email:
     type: basic_string
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     weight: 11
@@ -111,16 +111,17 @@ content:
     weight: 15
     region: content
   field_logo:
-    type: entity_reference_label
+    type: media_responsive_thumbnail
     label: hidden
     settings:
-      link: true
+      responsive_image_style: fourth_column_hq
+      image_link: ''
     third_party_settings: {  }
     weight: 10
     region: content
   field_phone:
     type: telephone_link
-    label: above
+    label: hidden
     settings:
       title: ''
     third_party_settings: {  }
