--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "composer/installers": "^1.10",
     "cweagans/composer-patches": "~1.0",
     "drupal/address": "^1.0",
+    "drupal/address_map_link": "^1.2",
     "drupal/admin_toolbar": "^3.0",
     "drupal/advagg": "^4.0",
     "drupal/allowed_formats": "^1.1",
