--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,13 +1,25 @@
 # This file describes an application. You can have multiple applications
 # in the same project.
 #
-# See https://docs.platform.sh/user_guide/reference/platform-app-yaml.html
+# See https://docs.platform.sh/configuration/app.html
 
 # The name of this app. Must be unique within a project.
 name: 'app'
 
 # The runtime the application uses.
-type: 'php:7.4'
+type: 'php:8.0'
+
+dependencies:
+    php:
+        composer/composer: '^2'
+
+runtime:
+    # Enable the redis extension so Drupal can communicate with the Redis cache.
+    extensions:
+        - redis
+        - sodium
+        - apcu
+        - blackfire
 
 # The relationships of the application with services or other applications.
 #
@@ -15,29 +27,39 @@ type: 'php:7.4'
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
 # side is in the form `<service name>:<endpoint name>`.
 relationships:
-    database: 'mysqldb:mysql'
-    redis: 'rediscache:redis'
+    database: 'db:mysql'
+    redis: 'cache:redis'
 
 # The size of the persistent disk of the application (in MB).
-disk: 4096
+disk: 3072
 
 # The 'mounts' describe writable, persistent filesystem mounts in the application.
 mounts:
+    # The default Drupal files directory.
     '/docroot/sites/default/files':
         source: local
         source_path: 'files'
+    # Drupal gets its own dedicated tmp directory. The settings.platformsh.php
+    # file will automatically configure Drupal to use this directory.
     '/tmp':
         source: local
         source_path: 'tmp'
+    # Private file uploads are stored outside the web root. The settings.platformsh.php
+    # file will automatically configure Drupal to use this directory.
     '/private':
         source: local
         source_path: 'private'
+    # Drush needs a scratch space for its own caches.
     '/.drush':
         source: local
         source_path: 'drush'
+    # Drush will try to save backups to this directory, so it must be
+    # writeable even though you will almost never need to use it.
     '/drush-backups':
         source: local
         source_path: 'drush-backups'
+    # Drupal Console will try to save backups to this directory, so it must be
+    # writeable even though you will almost never need to use it.
     '/.console':
         source: local
         source_path: 'console'
@@ -46,35 +68,27 @@ mounts:
 build:
     flavor: composer
 
-dependencies:
-    php:
-        composer/composer: '^2'
-    ruby:
-        'wkhtmltopdf-binary': '0.12.5.4'
-
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
     # The build hook runs after Composer to finish preparing up your code.
+    # No services are available but the disk is writeable.
     build: |
         set -e
-        bash install-redis.sh 5.3.1
-        curl -sS https://platform.sh/cli/installer | php
-        # This is needed because of the way the ruby gem works. The first time
-        # it runs, it unpacks the correct binary into your /app folder. And
-        # since we have a read-only files system by design, this can only be
-        # done in the build hook.
-        wkhtmltopdf -V
     # The deploy hook runs after your application has been deployed and started.
+    # Code cannot be modified at this point but the database is available.
+    # The site is not accepting requests while this script runs so keep it
+    # fast.
     deploy: |
         set -e
+        php ./drush/platformsh_generate_drush_yml.php
         cd docroot
-        drush -y cache:rebuild
+        drush -y cache-rebuild
         drush -y updatedb
-        drush -y config:import
+        drush -y config-import
 # The configuration of app when it is exposed to the web.
 web:
-    # Specific parameters for different URL prefixes.
     locations:
+        # All requests not otherwise specified follow these rules.
         '/':
             # The folder from which to serve static assets, for this location.
             #
@@ -87,23 +101,19 @@ web:
             # suffixed with "s" (seconds), "m" (minutes), "h" (hours), "d"
             # (days), "w" (weeks), "M" (months, as 30 days) or "y" (years, as
             # 365 days).
-            expires: 1h
+            expires: 5m
 
-            # Whether to forward disallowed and missing resources from this
-            # location to the application.
-            #
-            # Can be true, false or a URI path string.
+            # Redirect any incoming request to Drupal's front controller.
             passthru: '/index.php'
 
-            # Deny access to static files in this location.
+            # Deny access to all static files, except those specifically allowed below.
             allow: false
 
             # Rules for specific URI patterns.
             rules:
                 # Allow access to common static files.
-                '\.(jpe?g|png|gif|mp4|svgz?|css|js|map|ico|bmp|eot|woff2?|otf|ttf)$':
+                '\.(jpe?g|png|gif|svgz?|css|js|map|ico|bmp|eot|woff2?|otf|ttf)$':
                     allow: true
-                    expires: 1w
                 '^/robots\.txt$':
                     allow: true
                 '^/sitemap\.xml$':
@@ -115,14 +125,15 @@ web:
                 '^/sites/[^/]+/settings.*?\.php$':
                     scripts: false
 
+        # The files directory has its own special configuration rules.
         '/sites/default/files':
             # Allow access to all files in the public files directory.
             allow: true
-            expires: 1w
+            expires: 5m
             passthru: '/index.php'
             root: 'docroot/sites/default/files'
 
-            # Do not execute PHP scripts.
+            # Do not execute PHP scripts from the writeable mount.
             scripts: false
 
             rules:
@@ -130,28 +141,15 @@ web:
                 '^/sites/default/files/(css|js)':
                     expires: 2w
 
-# The configuration of scheduled execution.
 crons:
+    # Run Drupal's cron tasks every 19 minutes.
     drupal:
-        spec: '*/20 * * * *'
-        cmd: 'cd docroot ; drush core:cron'
-    snapshot:
-        # Take a snapshot automatically every night at 2:48 am (UTC).
-        spec: '48 2 * * *'
-        cmd: |
-            if [ "$PLATFORM_BRANCH" = main ]; then
-                platform snapshot:create --yes --no-wait
-            fi
-    renewcert:
-        # Force a redeploy at 3:35 am (UTC) on the 5th and 19th of every month.
-        spec: '35 3 5,19 * *'
-        cmd: |
-            if [ "$PLATFORM_BRANCH" = main ]; then
-                platform redeploy --yes --no-wait
-            fi
+        spec: '*/19 * * * *'
+        cmd: 'cd docroot ; drush core-cron'
 
-
-# Set PHP memory limit.
-variables:
-  php:
-    memory_limit: "256M"
+source:
+  operations:
+    auto-update:
+      command: |
+        curl -fsS https://raw.githubusercontent.com/platformsh/source-operations/main/setup.sh | { bash /dev/fd/3 sop-autoupdate; } 3<&0
+    
