--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -9,12 +9,8 @@
     cache:
       enabled: true
 
-      # Base the cache on the session cookie. Ignore all other cookies.
-      cookies: ['/^SS?ESS/']
-
-"http://www.{default}/":
-    type: redirect
-    to: "https://{default}/"
+      # Base the cache on the session cookie and custom Drupal cookies. Ignore all other cookies.
+      cookies: ['/^SS?ESS/', '/^Drupal.visitor/']
 
 "https://www.{default}/":
     type: redirect
