--- a/.platform/services.yaml
+++ b/.platform/services.yaml
@@ -3,9 +3,9 @@
 # Each service listed will be deployed
 # to power your Platform.sh project.
 
-mysqldb:
-    type: mysql:10.4
-    disk: 1024
+db:
+    type: mariadb:10.4
+    disk: 2048
 
-rediscache:
+cache:
     type: redis:6.0
