Update Lando config to match PSH env

--- a/.lando.yml
+++ b/.lando.yml
@@ -2,8 +2,8 @@ name: drupal.nl
 recipe: drupal9
 config:
   webroot: docroot
-  database: mysql:5.7
-  php: '7.4'
+  database: mariadb:10.4
+  php: '8.0'
 services:
   appserver:
     xdebug: true
@@ -16,10 +16,6 @@ services:
         XDEBUG_MODE:
     run:
       - /app/.lando/xdebug.sh
-  solr:
-    type: solr:7
-    core: collection1
-    portforward: true
   mailhog:
     type: mailhog
     portforward: true
