--- a/config/default/core.entity_form_display.paragraph.link_default.default.yml
+++ b/config/default/core.entity_form_display.paragraph.link_default.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.link_default.field_button_styling
     - field.field.paragraph.link_default.field_link
     - paragraphs.paragraphs_type.link_default
   module:
@@ -14,9 +15,15 @@ targetEntityType: paragraph
 bundle: link_default
 mode: default
 content:
+  field_button_styling:
+    type: options_select
+    weight: 0
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_link:
     type: link_default
-    weight: 0
+    weight: 1
     region: content
     settings:
       placeholder_url: ''
