--- a/config/default/core.entity_view_display.paragraph.link_default.default.yml
+++ b/config/default/core.entity_view_display.paragraph.link_default.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.link_default.field_button_styling
     - field.field.paragraph.link_default.field_link
     - paragraphs.paragraphs_type.link_default
   module:
@@ -14,6 +15,14 @@ targetEntityType: paragraph
 bundle: link_default
 mode: default
 content:
+  field_button_styling:
+    type: entity_reference_label
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    weight: 0
+    region: content
   field_link:
     type: link
     label: hidden
@@ -24,6 +33,6 @@ content:
       rel: '0'
       target: '0'
     third_party_settings: {  }
-    weight: 0
+    weight: 1
     region: content
 hidden: {  }
