--- a/config/default/field.storage.paragraph.field_button_styling.yml
+++ b/config/default/field.storage.paragraph.field_button_styling.yml
@@ -1,17 +1,16 @@
-uuid: af5ad237-3051-4dbf-8e53-157f0d7bb6cb
+uuid: 610c4fd1-56e3-487b-80bc-322c1bebe24b
 langcode: en
 status: true
 dependencies:
   module:
     - paragraphs
-id: paragraph.field_heading
-field_name: field_heading
+    - taxonomy
+id: paragraph.field_button_styling
+field_name: field_button_styling
 entity_type: paragraph
-type: string
+type: entity_reference
 settings:
-  max_length: 255
-  case_sensitive: false
-  is_ascii: false
+  target_type: taxonomy_term
 module: core
 locked: false
 cardinality: 1
