Switch to drupal/core-recommended
| Prod Packages                      | Operation  | Base    | Target   |
|------------------------------------|------------|---------|----------|
| composer/semver                    | Downgraded | 3.3.2   | 3.2.6    |
| doctrine/lexer                     | Downgraded | 1.2.3   | 1.2.1    |
| drupal/core                        | Upgraded   | 9.3.7   | 9.3.13   |
| drupal/core-composer-scaffold      | Upgraded   | 9.3.12  | 9.3.13   |
| drupal/core-recommended            | New        | -       | 9.3.13   |
| laminas/laminas-diactoros          | Downgraded | 2.10.0  | 2.8.0    |
| laminas/laminas-feed               | Downgraded | 2.17.0  | 2.15.0   |
| laminas/laminas-stdlib             | Downgraded | 3.7.1   | 3.6.1    |
| psr/cache                          | Downgraded | 3.0.0   | 1.0.1    |
| psr/container                      | Downgraded | 1.1.2   | 1.1.1    |
| symfony/console                    | Downgraded | v4.4.41 | v4.4.34  |
| symfony/css-selector               | Upgraded   | v4.4.37 | v5.4.3   |
| symfony/debug                      | Downgraded | v4.4.41 | v4.4.31  |
| symfony/dependency-injection       | Downgraded | v4.4.41 | v4.4.34  |
| symfony/deprecation-contracts      | Downgraded | v3.0.1  | v2.5.0   |
| symfony/error-handler              | Downgraded | v4.4.41 | v4.4.34  |
| symfony/event-dispatcher           | Downgraded | v4.4.37 | v4.4.34  |
| symfony/event-dispatcher-contracts | Downgraded | v1.1.12 | v1.1.11  |
| symfony/http-client-contracts      | Downgraded | v2.5.1  | v2.5.0   |
| symfony/http-foundation            | Downgraded | v4.4.41 | v4.4.34  |
| symfony/http-kernel                | Downgraded | v4.4.41 | v4.4.35  |
| symfony/mime                       | Downgraded | v5.4.8  | v5.4.0   |
| symfony/polyfill-ctype             | Downgraded | v1.25.0 | v1.23.0  |
| symfony/polyfill-iconv             | Downgraded | v1.25.0 | v1.23.0  |
| symfony/polyfill-intl-idn          | Downgraded | v1.25.0 | v1.23.

--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
     "drupal/ckeditorheight": "^1.0",
     "drupal/components": "^2.2",
     "drupal/config_update": "^1.0",
-    "drupal/core": "9.3.7",
-    "drupal/core-composer-scaffold": "~9.3.7",
+    "drupal/core-recommended": "^9.3",
+    "drupal/core-composer-scaffold": "^9.3",
     "drupal/csv_serialization": "^2.0@beta",
     "drupal/devel": "^4.0",
     "drupal/embed": "^1.0",
